<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.zhaw</groupId>
    <artifactId>www</artifactId>
    <version>1.0.0</version>

    <name>www</name>
    <description>WorldWideWalter App</description>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <npm-build-command>run build-dev</npm-build-command>
            </properties>
        </profile>
        <profile>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <id>prod</id>
            <properties>
                <npm-build-command>run build</npm-build-command>
            </properties>
        </profile>
    </profiles>

    <properties>
        <java.version>25</java.version>
    </properties>

    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.5</version>
    </parent>

    <modules>
        <module>backend</module>
        <module>frontend</module>
    </modules>

</project>
